--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "postcss": "^8",
+    "sass": "^1.68.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -21,6 +25,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
