--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
+    "stripe": "^13.9.0",
     "validator": "^13.11.0"
   },
   "name": "backend",
