--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "autoprefixer": "^10",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "sass": "^1.68.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-browser-geolocation": "^1.8.0",
+    "vue-router": "^4.0.3",
+    "vue3-google-map": "^0.18.0",
+    "vue3-toastify": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
