--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "hbs": "^4.2.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
+    "request": "^2.88.2",
     "stripe": "^13.9.0",
     "validator": "^13.11.0"
   },
