--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,10 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "qrcode-generator": "^1.4.4",
+    "request": "^2.88.2",
     "sass": "^1.68.0",
     "vue": "^3.2.13",
     "vue-browser-geolocation": "^1.8.0",
