--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mapbox-gl": "^2.15.0",
     "qrcode-generator": "^1.4.4",
     "request": "^2.88.2",
     "sass": "^1.68.0",
