--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "request": "^2.88.2",
     "stripe": "^13.9.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "vue-router": "^4.2.5"
   },
   "name": "backend",
   "version": "1.0.0",
