--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,11 @@
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "mapbox-gl": "^2.15.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode-generator": "^1.4.4",
     "request": "^2.88.2",
     "sass": "^1.68.0",
